# polytech-math-logic-course-bdd

./: .gitignore  CMakeLists.txt  README.md  info.md
include/: bdd.h
src/: BDDFormulaBuilder.cpp  BDDFormulaBuilder.hpp  BDDHelper.cpp  BDDHelper.hpp  Conditions.cpp  Conditions.hpp  PrintHelper.cpp  PrintHelper.hpp  TestFixture.cpp  TestFixture.hpp  main.cpp  mainTEST.cpp
